--- a/README.org
+++ b/README.org
@@ -2,165 +2,7 @@
 
 * C++
 
-** Template
-
-Diffrences:
-- Include algorithm, iostream, limits, string, array instead of bits/stdc++.h because bits/stdc++.h is too large semantic to parse.
-- Add some template functions.
-- Using limits intead of constants.
-
-#+BEGIN_SRC cpp
-#include <algorithm>
-#include <iostream>
-#include <limits>
-#include <string>
-#include <array>
-using namespace std;
-
-/* clang-format off */
-// #define int long long
-// #define double long double
-struct Fast {Fast() {cin.tie(0); ios::sync_with_stdio(false);}} fast;
-
-template <typename T> inline size_t maxElement(T beginIt, T endIt) { return max_element(beginIt, endIt); }
-template <typename T> inline size_t minElement(T beginIt, T endIt) { return min_element(beginIt, endIt); }
-template <typename T> inline size_t maxIndex(T beginIt, T endIt) { return distance(beginIt, *max_element(beginIt, endIt)); }
-template <typename T> inline size_t minIndex(T beginIt, T endIt) { return distance(beginIt, *min_element(beginIt, endIt)); }
-template <typename T> inline int sum(T beginIt, T endIt) { return accumulate(beginIt, endIt, 0); }
-template <typename T> inline int mean(T beginIt, T endIt) { return sum(beginIt, endIt) / distance(beginIt, endIt); }
-template <typename T> inline void debug(T x) { cerr << x << " " << "(L:" << __LINE__ << ")" << endl; }
-/* clang-format on */
-
-signed main(void) {
-  /* */
-  int num; // num
-  num = 0; // count, result
-  num = numeric_limits<int>::min(); // max
-  num = numeric_limits<int>::max(); // min
-  // double num; // num
-  // num = 0; // count, result
-  // num = numeric_limits<double>::min(); // max
-  // num = numeric_limits<double>::max(); // min
-  int N, M;
-  array<int, 10000> A;
-  string S, T;
-  /* */
-
-  cin >> N;
-  for (auto it = A.begin(); it < A.begin() + N; ++it) cin >> *it;
-
-  for (auto it = A.begin(); it < A.begin() + N; ++it) cout << *it << endl;
-
-  cout << num << endl;
-  // cout << fixed << setprecision(10) << num << endl;
-  return 0;
-}
-#+END_SRC
-
-
-** C++ Template
-*** Headers
-
-#+BEGIN_SRC cpp
-// clang-format off
-
-#include <bits/stdc++.h>
-#+END_SRC
-
-*** Namespace
-#+BEGIN_SRC cpp
-using namespace std;
-#+END_SRC
-
-*** Int to Long Long
-#+BEGIN_SRC cpp
-// #define int long long
-#+END_SRC
-
-*** Fast I/O
-#+BEGIN_SRC cpp
-struct Fast {Fast(){std::cin.tie(0);ios::sync_with_stdio(false);}} fast;
-#+END_SRC
-
-*** Short Macro
-
-#+BEGIN_SRC cpp
-/* short */
-#define pb push_back
-#define eb emplace_back
-#define mp make_pair
-#define Fi first
-#define Se second
-#define ALL(v) begin(v), end(v)
-#define RALL(v) rbegin(v), rend(v)
-#define X real()
-#define Y imag()
-#+END_SRC
-
-*** Repeat Macro
-#+BEGIN_SRC cpp
-/* REPmacro */
-#define REPS(i, a, n) for (ll i = (a); i < (ll)(n); ++i)
-#define REP(i, n) REPS(i, 0, n)
-#define RREP(i, n) REPS(i, 1, n + 1)
-#define DEPS(i, a, n) for (ll i = (a); i >= (ll)(n); --i)
-#define DEP(i, n) DEPS(i, n, 0)
-#define EACH(i, n) for (auto&& i : n)
-#+END_SRC
-
-*** Debug
-#+BEGIN_SRC cpp
-/* debug */
-#define debug(x) cerr << x << " " << "(L:" << __LINE__ << ")" << '\n';
-#+END_SRC
-
-*** Alias
-#+BEGIN_SRC cpp
-/* alias */
-using ll = long long;
-using ull = unsigned long long;
-using vi = vector<int>;
-using vvi = vector<vi>;
-using vvvi = vector<vvi>;
-using pii = pair<int, int>;
-using D = double;
-using P = complex<D>;
-using vs = vector<string>;
-template <typename T> using PQ = priority_queue<T>;
-template <typename T> using minPQ = priority_queue<T, vector<T>, greater<T>>;
-#+END_SRC
-
-*** Constants
-#+BEGIN_SRC cpp
-/* const */
-const int INF = 1001001001;
-const ll LINF = 1001001001001001001ll;
-const int MOD = 1e9 + 7;
-const D EPS = 1e-9;
-const int dx[] = {0, 1, 0, -1, 1, -1, 1, -1}, dy[] = {1, 0, -1, 0, 1, -1, -1, 1};
-#+END_SRC
-
-*** Functions
-#+BEGIN_SRC cpp
-/* func */
-inline bool inside(int y, int x, int H, int W) {return y >= 0 && x >= 0 && y < H && x < W;}
-inline int in() {int x; cin >> x; return x;}
-inline ll IN() {ll x; cin >> x; return x;}
-inline vs split(const string& t, char c) {vs v; stringstream s(t); string b; while(getline(s, b, c)) v.eb(b); return v;}
-template <typename T> inline bool chmin(T& a, const T& b) {if (a > b) a = b; return a > b;}
-template <typename T> inline bool chmax(T& a, const T& b) {if (a < b) a = b; return a < b;}
-template <typename T, typename S> inline void print(const pair<T, S>& p) {cout << p.first << " " << p.second << endl;}
-template <typename T> inline void print(const T& x) {cout << x << '\n';}
-template <typename T, typename S> inline void print(const vector<pair<T, S>>& v) {for (auto&& p : v) print(p);}
-template <typename T> inline void print(const vector<T>& v, string s = " ") {REP(i, v.size()) cout << v[i] << (i != (ll)v.size() - 1 ? s : "\n");}
-// clang-format on
-#+END_SRC
-
-*** Main
-#+begin_src cpp
-signed main() {
-  cout << "Hello, World!" << endl;
-  return 0;
-}
-#+end_src
-
+- main.cpp
+- bits/stdc++.h
+- Makefile
+- template.cpp
