--- a/README.org
+++ b/README.org
@@ -3,61 +3,24 @@
 * Requirements
 - GNU Emacs
 - GNU Make
-- GNU Compiler Collection (>= 5.1) (C++14 or above)
-- LLVM Clang Compiler
+- C++ Compiler
+  - GNU Compiler Collection (g++)
+  - LLVM Clang Compiler (clang++)
 
-In Debian GNU/LINUX:
+In Debian GNU/Linux:
 #+BEGIN_SRC shell
-sudo apt install build-essential emacs-nox clang
+sudo apt install emacs-nox g++ make
 #+END_SRC
+
+In Mac OS X:
+#+begin_src shell
+xcode-select --install
+#+end_src
 
 
 * C++
 
 ** main.cpp
-
-#+BEGIN_SRC cpp
-#include "bits/stdc++.h"
-using namespace std;
-
-// #define int long long
-// #define double long double
-struct Fast {Fast() {cin.tie(0); ios::sync_with_stdio(false);}} fast;
-
-template <typename T> inline size_t maxElement(T beginIt, T endIt) { return max_element(beginIt, endIt); }
-template <typename T> inline size_t minElement(T beginIt, T endIt) { return min_element(beginIt, endIt); }
-template <typename T> inline size_t maxIndex(T beginIt, T endIt) { return distance(beginIt, *max_element(beginIt, endIt)); }
-template <typename T> inline size_t minIndex(T beginIt, T endIt) { return distance(beginIt, *min_element(beginIt, endIt)); }
-template <typename T> inline int sum(T beginIt, T endIt) { return accumulate(beginIt, endIt, 0); }
-template <typename T> inline int mean(T beginIt, T endIt) { return sum(beginIt, endIt) / distance(beginIt, endIt); }
-template <typename T> inline void debug(T x) { cerr << x << " " << "(L:" << __LINE__ << ")" << endl; }
-
-signed main(void) {
-  /* */
-  int num; // num
-  num = 0; // count, result
-  num = numeric_limits<int>::min(); // max
-  num = numeric_limits<int>::max(); // min
-  // double num; // num
-  // num = 0; // count, result
-  // num = numeric_limits<double>::min(); // max
-  // num = numeric_limits<double>::max(); // min
-  int N, M;
-  array<int, 10000> A;
-  string S, T;
-  /* */
-
-  cin >> N;
-  for (auto it = A.begin(); it < A.begin() + N; ++it) cin >> *it;
-
-  for (auto it = A.begin(); it < A.begin() + N; ++it) cout << *it << endl;
-
-  cout << num << endl;
-  // cout << fixed << setprecision(10) << num << endl;
-  return 0;
-}
-#+END_SRC
-
 
 ** bits/stdc++.h
 
@@ -115,50 +78,15 @@ This header includes sub-set of standard C++ Library.
 - vector:
   - std::vector
 
-#+BEGIN_SRC cpp
-// Headers for C++
-#include <algorithm>
-#include <array>
-#include <cmath>
-#include <iomanip>
-#include <iostream>
-#include <iterator>
-#include <limits>
-#include <list>
-#include <map>
-#include <numeric>
-#include <queue>
-#include <set>
-#include <stack>
-#include <string>
-#include <tuple>
-#include <utility>
-#include <vector>
-#+END_SRC
-
-
 
 ** Makefile
-#+BEGIN_SRC makefile
-CXX := g++
-CXXFLAGS := -std=c++14 -Wall
-LDFLAGS := -lc -lstdc++
-TARGET := main
-SOURCE := $(wildcard *.cpp)
-OBJ := $(addsuffix .o, $(basename $(wildcard *.cpp)))
 
-all: $(TARGET)
+To build:
+#+begin_src shell
+make
+./a.out
+#+end_src
 
-$(TARGET): $(addsuffix .o, $(TARGET))
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $<
-
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-clean:
-	$(RM) $(basename $(wildcard *.cpp)) $(addsuffix .o, $(basename $(wildcard *.cpp)))
-#+END_SRC
-  
 
 * Reference
 - [[https://en.cppreference.com/w/][C++ Reference]]
