--- a/README.org
+++ b/README.org
@@ -30,6 +30,8 @@ This header includes sub-set of standard C++ Library.
 - algorithm
   - std::sort
   - std::find
+  - std::lower_bound
+  - std::upper_bound
 - array
   - std::array
 - bitset
@@ -85,6 +87,7 @@ make
 - stack
 - tuple
 - vector
+
 
 * Reference
 - [[https://en.cppreference.com/w/][C++ Reference]]
