--- a/README.org
+++ b/README.org
@@ -2,40 +2,35 @@
 #+OPTIONS: ^:{}
 
 * Requirements
-- GNU Emacs
-- GNU Make
+- Artistic Style
+- GNU Emacs (Optional)
 - C++ Compiler
   - GNU Compiler Collection (g++)
   - LLVM Clang Compiler (clang++)
+- GNU Make
 
 In Debian GNU/Linux:
 #+BEGIN_SRC shell
-sudo apt install emacs-nox g++ make
+sudo apt install astyle emacs-nox g++ make
 #+END_SRC
 
-In Mac OS X:
-#+begin_src shell
-xcode-select --install
-#+end_src
+* C++
 
+** Data Structures
+- array
+- bitset
+- list
+- map
+- pair
+- set
+- vector
 
-* Files
-
-** main.cpp
-
-** bits/stdc++.h
-
-This header includes sub-set of standard C++ Library.
-
+** Algorithms
 - algorithm
   - std::sort
   - std::find
   - std::lower_bound
   - std::upper_bound
-- array
-  - std::array
-- bitset
-  - std::bitset
 - cmath
   - std::abs
   - std::pow
@@ -49,44 +44,8 @@ This header includes sub-set of standard C++ Library.
   - std::endl
 - limits
   - std::numeric_limits
-- map
-  - std::map
-  - std::multimap
 - numeric
   - std::accumulate
-- set
-  - std::set
-  - std::multiset
-- string
-  - std::string
-- utility
-  - std::pair
-- vector
-  - std::vector
-
-
-** Makefile
-
-To build:
-#+begin_src shell
-make
-./a.out
-#+end_src
-
-
-* C++
-** Data Structures
-
-- array
-- bitset
-- deque
-- list
-- map
-- queue
-- set
-- stack
-- tuple
-- vector
 
 
 * Reference
