--- a/README.org
+++ b/README.org
@@ -16,11 +16,18 @@ $ sudo apt install cmake g++ make
 $ sudo apt install emacs # or emacs-nox
 #+END_SRC
 
+
+** Libraries
+- C++ Standard Library (C++14)
+- Boost (1.60)
+
+
 ** Reference
 
 - [[https://en.cppreference.com/][C++ Reference]]
 - [[https://cpprefjp.github.io/][C++ 日本語リファレンス]]
 
+
 ** TODO
-- clang-format integration.
-- In project library, build tools and compiler.
+- Add formatter (such as astyle or clang-format)
+
