--- a/README.org
+++ b/README.org
@@ -60,5 +60,7 @@ std::copy(vec.begin(), vec.end(), out_it);
 ** TODO
 - Add formatter (such as astyle or clang-format)
 - Add clang
-  curl http://releases.llvm.org/3.8.1/clang+llvm-3.8.1-x86_64-linux-gnu-debian8.tar.xz | tar xf -C $HOME/.local
+  wget http://releases.llvm.org/3.8.1/clang+llvm-3.8.1-x86_64-linux-gnu-debian8.tar.xz
+  tar xf clang+llvm-3.8.1-x86_64-linux-gnu-debian8.tar.xz
+  cp -R clang+llvm-3.8.1-x86_64-linux-gnu-debian8/{bin,include,lib,libexec,share} $HOME/.local
 
